Fix rounded borders on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+input {
+  border-radius: 0;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
 @tailwind base;
